--- a/PickupSports/Views/AddGamePage.xaml
+++ b/PickupSports/Views/AddGamePage.xaml
@@ -1,15 +1,67 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:local="clr-namespace:PickupSports.ViewModels"
              x:Class="PickupSports.Views.AddGamePage"
              BackgroundColor="#f0fff0">
 
+    <ContentPage.BindingContext>
+        <local:AddGameViewModel/>
+    </ContentPage.BindingContext>
+
     <ContentPage.Content>
         <StackLayout Orientation="Vertical">
-            <Label Text="Edit Profile" FontSize="30" FontAttributes="Bold" TextColor="Orange"
+            <Label Text="Add Game" FontSize="34" FontAttributes="Bold" TextColor="Orange"
                             VerticalOptions="Start" HorizontalOptions="CenterAndExpand" />
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="AUTO"/>
+                    <RowDefinition Height="AUTO"/>
+                    <RowDefinition Height="AUTO"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Grid.Row="0" Margin="0,10,0,0">
+                    <Label Text="{Binding teamName}" TextColor="Orange" FontSize="24"
+                           VerticalOptions="CenterAndExpand" HorizontalOptions="Center"/>
+                    <Entry Text="{Binding yourScore}" Keyboard="Numeric" TextColor="Black" FontSize="24" HorizontalTextAlignment="Center"
+                           HorizontalOptions="End" WidthRequest="50"/>
+                </StackLayout>
+
+                <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand" Grid.Row="1" Margin="0,10,0,0">
+                    <Entry Text="{Binding opTeamName}" Placeholder="Enter Opponent Team Name" TextColor="Orange" FontSize="24" HorizontalTextAlignment="Center"
+                           VerticalOptions="Center" HorizontalOptions="Center"/>
+                    <Entry Text="{Binding opScore}" Keyboard="Numeric" TextColor="Black" FontSize="24" HorizontalTextAlignment="Center"
+                           HorizontalOptions="Center" WidthRequest="50"/>
+                </StackLayout>
+
+                <StackLayout Orientation="Horizontal" Grid.Row="2" Margin="10,30,0,0">
+                    <Label Text="Location:" TextColor="Orange" FontSize="24"/>
+                    <Entry Text="{Binding location}" TextColor="Black" FontSize="18" WidthRequest="250"
+                           HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand"/>
+                </StackLayout>
+
+                <StackLayout Orientation="Horizontal" Grid.Row="3" Margin="0,30,0,0">
+                    <StackLayout Orientation="Vertical" HorizontalOptions="CenterAndExpand">
+                        <TimePicker Time="{Binding time}" HorizontalOptions="CenterAndExpand"/>
+                        <Label Text="Time" TextColor="Orange" FontSize="20" HorizontalOptions="CenterAndExpand"/>
+                    </StackLayout>
+                    <StackLayout Orientation="Vertical" HorizontalOptions="CenterAndExpand">
+                        <DatePicker Date="{Binding date}" MinimumDate="{Binding minDate}" MaximumDate="{Binding maxDate}" 
+                                    WidthRequest="100" HorizontalOptions="Center"/>
+                        <Label Text="Date" TextColor="Orange" FontSize="20" HorizontalOptions="CenterAndExpand"/>
+                    </StackLayout>
+                </StackLayout>
+            </Grid>
+
+            <StackLayout Orientation="Vertical" VerticalOptions="EndAndExpand">
+                <Button Text="Save" Command="{Binding Save}" CornerRadius="10" FontSize="24"
+                    Margin="30,0,30,0" VerticalOptions="StartAndExpand" BackgroundColor="Orange"/>
+                <Button Text="CANCEL" Command="{Binding Cancel}" CornerRadius="10" HeightRequest="30" Padding="0"
+                    Margin="30,30,30,30" VerticalOptions="EndAndExpand" BackgroundColor="Red"/>
+            </StackLayout>
+
         </StackLayout>
-        
-        
     </ContentPage.Content>
 </ContentPage>
